Collection list page and styling update

--- a/ostad-shopify-app-assignment-1/templates/core/collections_list.html
+++ b/ostad-shopify-app-assignment-1/templates/core/collections_list.html
@@ -4,7 +4,7 @@
     <main>
         <div class="max-w-l mt-2 mb-5">
             <div class="">
-                <h2 class="uppercase mb-4 font-medium">Custom Collections</h2>
+                <h2 class="uppercase mb-4 ml-1 font-medium">Custom Collections</h2>
             
                 <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
                     <table class="w-full text-sm text-left text-gray-500">
@@ -41,7 +41,7 @@
                 </div>
             </div>
             <div class="mt-4">
-                <h2 class="uppercase mb-4 font-medium">Smart Collections</h2>
+                <h2 class="uppercase mb-4 ml-1 font-medium">Smart Collections</h2>
             
                 <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
                     <table class="w-full text-sm text-left text-gray-500">
