--- a/ostad-shopify-app-assignment-1/templates/core/splash.html
+++ b/ostad-shopify-app-assignment-1/templates/core/splash.html
@@ -2,9 +2,9 @@
 
 {% block content %}
     <header>
-        <h1 class="text-3xl font-bold leading-tight text-gray-900">
+        <p class="text-lg px-4 sm:px-6 lg:px-8 text-gray-900">
             loading...
-        </h1>
+        </p>
     </header>
     <main>
 
