--- a/ostad-shopify-app-assignment-1/templates/core/index.html
+++ b/ostad-shopify-app-assignment-1/templates/core/index.html
@@ -2,8 +2,11 @@
 
 {% block content %}
     <header>
-        <h1 class="text-3xl font-bold leading-tight text-gray-900">
-            {{title}}
-        </h1>
+        <p class="text-gray-900 px-4 sm:px-6 lg:px-8">
+            Hi {{ user_email }}, welcome to Ostad Assignment 1 App!
+        </p>
+        <p class="text-gray-900 px-4 sm:px-6 lg:px-8 mt-4">
+            Click on the menu buttons above to access the app features.
+        </p>
     </header>
 {% endblock %}
