--- a/ostad-shopify-app-assignment-1/templates/core/base.html
+++ b/ostad-shopify-app-assignment-1/templates/core/base.html
@@ -10,13 +10,13 @@
     {{ data|json_script:"shopify-app-init" }}
     <script type="module" src="{% static 'packages/build/index.js' %}"></script>
 </head>
-<body class="min-h-screen pt-2">
+<body class="min-h-screen pt-4">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="mx-auto shadow-md sm:rounded-lg bg-white">
             <div class="py-4 px-4 sm:px-6 lg:px-8 text-base font-medium uppercase">
-                <a href="{% url 'core:home' %}" class="pr-4 hover:underline">Home</a>
-                <a href="{% url 'core:products' %}" class="pr-4 hover:underline">Products</a>
-                <a href="{% url 'core:collections_list' %}" class="pr-4 hover:underline">Collections</a>
+                <a href="{% url 'core:home' %}" class="pr-8 hover:underline">Home</a>
+                <a href="{% url 'core:shop' %}" class="pr-8 hover:underline">Shop</a>
+                <a href="{% url 'core:collections_list' %}" class="pr-8 hover:underline">Collections</a>
             </div>
         </div>
     </div>
