Collections page styling update

--- a/ostad-shopify-app-assignment-1/templates/core/collections_list.html
+++ b/ostad-shopify-app-assignment-1/templates/core/collections_list.html
@@ -40,7 +40,7 @@
                     </table>
                 </div>
             </div>
-            <div class="mt-4">
+            <div class="mt-5 pt-2">
                 <h2 class="uppercase mb-4 ml-2 font-medium">Smart Collections</h2>
             
                 <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
