Create collection without messages

--- a/ostad-shopify-app-assignment-1/templates/core/collection_create.html
+++ b/ostad-shopify-app-assignment-1/templates/core/collection_create.html
@@ -13,9 +13,9 @@
                     Back to Collections
                 </a>
             </div>
-            <div class="mt-5">
-                <div class="mb-2 ml-2 font-medium">
-                    <span class="uppercase my-auto">Create New {{ collection_type|title }} Collection</span>
+            <div class="mt-6">
+                <div class="mb-4 font-medium">
+                    <span class="uppercase my-auto">Create New Collection</span>
                 </div>
             
                 <div class="mt-3">
