--- a/ostad-shopify-app-assignment-1/templates/core/collections_list.html
+++ b/ostad-shopify-app-assignment-1/templates/core/collections_list.html
@@ -34,7 +34,7 @@
                                         {{ collection.body_html|safe }}
                                     </td>
                                     <td class="px-6 py-4 text-right">
-                                        <a href="#" class="py-2 px-2 me-2 mb-2 text-sm font-medium text-gray-900 hover:text-gray-800 focus:outline-none bg-gray-200 rounded-lg border border-gray-200 hover:bg-gray-300 focus:z-10 focus:ring-4 focus:ring-white">Edit</a>
+                                        <a href="{% url 'core:collection_edit' collection.id %}" class="py-2 px-2 me-2 mb-2 text-sm font-medium text-gray-900 hover:text-gray-800 focus:outline-none bg-gray-200 rounded-lg border border-gray-200 hover:bg-gray-300 focus:z-10 focus:ring-4 focus:ring-white">Edit</a>
                                         <a href="{% url 'core:collection_products_list' 'custom' collection.id %}" class="py-2 px-2 me-2 mb-2 ml-2 text-sm font-medium text-gray-900 hover:text-gray-800 focus:outline-none bg-gray-200 rounded-lg border border-gray-200 hover:bg-gray-300 focus:z-10 focus:ring-4 focus:ring-white">Products</a>
                                     </td>
                                 </tr>
