--- a/ostad-shopify-app-assignment-1/templates/core/collection_products_list.html
+++ b/ostad-shopify-app-assignment-1/templates/core/collection_products_list.html
@@ -14,7 +14,7 @@
             <div class="mt-2">
                 <div class="mb-2 ml-2 font-medium flex justify-between">
                     <span class="uppercase my-auto">Products in <span class="font-bold">{{ collection.title }}</span> Collection</span>
-                    <a href="#" class="py-2 px-2 me-2 mb-2 text-sm font-medium text-white hover:text-gray-100 focus:outline-none bg-gray-900 rounded-lg border border-gray-200 hover:bg-gray-800 focus:z-10 focus:ring-4 focus:ring-white">Create New Product in Collection</a>
+                    <a href="{% url 'core:product_create' collection.id %}" class="py-2 px-2 me-2 mb-2 text-sm font-medium text-white hover:text-gray-100 focus:outline-none bg-gray-900 rounded-lg border border-gray-200 hover:bg-gray-800 focus:z-10 focus:ring-4 focus:ring-white">Create New Product in Collection</a>
                 </div>
             
                 <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
