--- a/ostad-shopify-app-assignment-1/templates/core/collection_products_list.html
+++ b/ostad-shopify-app-assignment-1/templates/core/collection_products_list.html
@@ -42,7 +42,7 @@
                                         {{ product.body_html|safe }}
                                     </td>
                                     <td class="px-6 py-4 text-right">
-                                        <a href="#" class="py-2 px-2 me-2 mb-2 text-sm font-medium text-gray-900 hover:text-gray-800 focus:outline-none bg-gray-200 rounded-lg border border-gray-200 hover:bg-gray-300 focus:z-10 focus:ring-4 focus:ring-white">Edit</a>
+                                        <a href="{% url 'core:product_edit' collection.id product.id %}" class="py-2 px-2 me-2 mb-2 text-sm font-medium text-gray-900 hover:text-gray-800 focus:outline-none bg-gray-200 rounded-lg border border-gray-200 hover:bg-gray-300 focus:z-10 focus:ring-4 focus:ring-white">Edit</a>
                                     </td>
                                 </tr>
                             {% endfor %}
