--- a/ostad-shopify-app-assignment-1/templates/core/product_create.html
+++ b/ostad-shopify-app-assignment-1/templates/core/product_create.html
@@ -21,7 +21,7 @@
                 <div class="mt-3">
                     <form action="" class="" method="POST">
                         {{ form|crispy }}
-                        <button type="submit" class="py-2 px-2 me-2 mb-2 text-sm font-medium text-white hover:text-gray-100 focus:outline-none bg-gray-900 rounded-lg border border-gray-200 hover:bg-gray-800 focus:z-10 focus:ring-4 focus:ring-white">Create Collection</button>
+                        <button type="submit" class="py-2 px-2 me-2 mb-2 text-sm font-medium text-white hover:text-gray-100 focus:outline-none bg-gray-900 rounded-lg border border-gray-200 hover:bg-gray-800 focus:z-10 focus:ring-4 focus:ring-white">Create Product</button>
                     </form>
                 </div>
             </div>
