--- a/ostad-shopify-app-assignment-2/templates/core/index.html
+++ b/ostad-shopify-app-assignment-2/templates/core/index.html
@@ -3,7 +3,7 @@
 {% block content %}
     <header>
         <p class="text-gray-900 px-4 sm:px-6 lg:px-8">
-            Hi {{ user_email }}, welcome to Ostad Assignment 1 App!
+            Hi {{ user_email }}, welcome to Ostad Assignment 2 (language translator) App!
         </p>
         <p class="text-gray-900 px-4 sm:px-6 lg:px-8 mt-4">
             Click on the menu buttons above to access the app features.
