--- a/ostad-shopify-app-assignment-2/templates/core/index.html
+++ b/ostad-shopify-app-assignment-2/templates/core/index.html
@@ -6,7 +6,7 @@
             Hi {{ user_email }}, welcome to Ostad Assignment 2 (language translator) App!
         </p>
         <p class="text-gray-900 px-4 sm:px-6 lg:px-8 mt-4">
-            Click on the menu buttons above to access the app features.
+            Enable this app on epp embeds on your theme customization of your store.
         </p>
     </header>
 {% endblock %}
